customized scroll bar and fixed gap at the top of navbar

--- a/styles/view.scss
+++ b/styles/view.scss
@@ -23,29 +23,45 @@
   margin-left: auto;
   margin-right: auto;
   @include rounded-more;
-  padding-top: 1%;
+  // padding-top: 1%;
+  background-color: $white;
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+    overflow: hidden;
+  // overflow: auto;
+  height: 100vh;
+  // margin-top: 3%;
+  // padding-top: 8.5%;
 }
 
-// .bg-img {
-  // width: 100%;
-  // width: fit-content;
-  // height: 100%;
-  // z-index: -1;
+.container {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  margin-top: 10.5%;
+  margin-bottom: 2%;
+  // @include margins(0%, 10.5%);
+}
 
-  // * {
-  //   width: 150%;
-  // }
-// }
+.container::-webkit-scrollbar {
+  width: 2.5vw; /* Width for vertical scrollbar */
+}
 
-// .auth-cont {
-//   // width: fit-content;
-//   // height:fit-content;
+/* Track (background of the scrollbar) */
+.container::-webkit-scrollbar-track {
+  background: $white;
+  @include rounded();
+}
 
-// }
-// .sec-header {
-//   @include secHeader($white, $norm);
-// }
+/* Thumb (the draggable part of the scrollbar) */
+.container::-webkit-scrollbar-thumb {
+  background-color: $pink; /* Color of the scrollbar */
+  @include rounded();
+  border: .55vw solid $white; /* Adds padding around the thumb */
+}
 
-// .container {
-//   margin: 10%;
-// }
+/* Thumb hover effect */
+.container::-webkit-scrollbar-thumb:hover {
+  background-color: $pop;
+}
